syntax = "proto3";

package coolstore.product_catalog.v1;

option csharp_namespace = "CoolStore.Protobuf.ProductCatalog.V1";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message CatalogProductDto {
  string id = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
  double price = 4;
  string image_url = 5;
  string inventory_id = 6;
  string category_id = 7;
  string category_name = 8;
}

message CategoryDto {
  string id = 1;
  string name = 2;
}

message ProductCreated {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string image_url = 5;
}

message ProductUpdated {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string image_url = 5;
}

message ProductDeleted  {
  string product_id = 1;
}
